src/test/ui/destructuring-assignment/tuple_destructure_fail.stderr
error: `..` can only be used once per tuple pattern
  --> $DIR/tuple_destructure_fail.rs:5:16
   |
LL |     (a, .., b, ..) = (0, 1);
   |         --     ^^ can only be used once per tuple pattern
   |         |
   |         previously used here

error[E0308]: mismatched types
  --> $DIR/tuple_destructure_fail.rs:6:5
   |
LL |     (a, a, b) = (1,2);
   |     ^^^^^^^^^   ----- this expression has type `({integer}, {integer})`
   |     |
   |     expected a tuple with 2 elements, found one with 3 elements
   |
   = note: expected tuple `({integer}, {integer})`
              found tuple `(_, _, _)`

error[E0308]: mismatched types
  --> $DIR/tuple_destructure_fail.rs:7:5
   |
LL |     (_,) = (1,2);
   |     ^^^^   ----- this expression has type `({integer}, {integer})`
   |     |
   |     expected a tuple with 2 elements, found one with 1 element
   |
   = note: expected tuple `({integer}, {integer})`
              found tuple `(_,)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
